--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,4 +26,7 @@
     "markdown.copyFiles.destination": {
         "*": "/images/${documentBaseName}/"
     },
+    "markdownlint.config": {
+        "MD028": false,
+    },
 }
